<resources>
    <string name="app_name">Attendance With Fingerprint</string>
    <string name="n">\n</string>

    <!--###ABOUT###-->
    <string name="about">About</string>

    <string name="dev_name">Developer : MuliaTech</string>
    <string name="about_description">Attendance With Fingerprint is a app focused on Fast and easy way keep track of attendance of your employees or students and access your data of your employees with website base.</string>
    <string name="uses_header">Employee Attendance With Qr also uses the following open-source libraries:</string>

    <string name="uses_aosp_header1">Android Support Libraries</string>
    <string name="uses_aosp_detail1">Appcompat-v7 25.0.0; distributed by the Android Open Source Project under an Apache License, Version 2.0.</string>

    <string name="uses_aosp_header3"><a href="https://github.com/googlecodelabs/android-design-library">Material Design</a></string>
    <string name="uses_aosp_detail3">Material Design is licensed under the Apache License v2.0 Copyright 2015 Google, Inc.</string>

    <string name="uses_aosp_header4"><a href="https://github.com/zxing/zxing/blob/master/LICENSE">ZXing ("Zebra Crossing")</a></string>
    <string name="uses_aosp_detail4">Zxing is licensed under the Apache License v2.0.</string>
    <!--###ABOUT###-->

    <!--###Others###-->
    <string name="message">Message:</string>
    <string name="name">Name:</string>
    <string name="example_http_abedputra_com">*Example: http://connectwithdev.com/</string>
    <string name="key">Your KEY</string>
    <string name="example_5b4019d2997f6267f58a027df363ee8f">*Example: 5b4019d2997f6267f58a027df363ee8f</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="url_and_key">Please fill in the following fields</string>
    <string name="url">Your URL</string>
    <string name="check_in">Check-In</string>
    <string name="check_out">Check-Out</string>
    <string name="settings">Settings</string>
    <string name="check_attendance">Check Attendance</string>
    <string name="need_grant_permission">You need to grant permission.</string>
    <string name="info_qr_setting"><b>Note:</b>\nPlease find the QR from management system, Home -> Setting.</string>
    <string name="send_via">Send Email Via</string>
    <string name="share_via">Share via</string>
    <string name="please_setting_url_key"><![CDATA[Please Setting URL & KEY First!]]></string>
    <string name="setting_key">Please Setting KEY First!</string>
    <string name="setting_url">Please Setting URL First!</string>
    <string name="trying_location">Please wait, we are trying to get your current address …</string>
    <string name="ask_admin">Area is empty! Please ask your Admin, to setup the location area.</string>
    <string name="key_wrong">Key is wrong, please check your key.</string>
    <string name="insert_key_first">Please insert your key first!</string>
    <string name="your_name">Your Name</string>
    <string name="example_abed_putra">*Example: Abed Putra\n*Once saved cannot change it.</string>
    <string name="empty_name">Your name is empty</string>
    <string name="location_outside_office">Your location is outside from the office area!</string>
    <string name="check_office_location">Please wait. We checking Your office location…</string>
    <string name="sending_attendance">Please wait, we sending your attendance…</string>
    <string name="welcome_to_attendance">Welcome to Attendance!</string>
    <string name="data_attendance_empty">Your Data Attendance is empty.</string>
    <string name="attendance">Attendance</string>
    <string name="absent_with_fingerprint">Please be absent with your fingerprint.</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet">No internet. Please check your internet connection.</string>
    <string name="something_error">Error! Something error.</string>
    <string name="success_saved">Success! Saved.</string>
    <string name="id_number_is_empty">Your ID number is empty. Please type your ID number.</string>
    <string name="example_0985567890442345">*Example: 0985567EA0442345</string>
    <string name="your_id_number_empty">Your ID Number is Empty.</string>
    <string name="your_id_number">Your ID Number</string>
    <string name="url_incorrect">Your URL is incorrect, please check again.</string>
    <string name="server_error_or_url">Something error! Please check your server or URL.</string>
    <string name="error_unexpected">Error! Unexpected code</string>
    <string name="already_check_in">You already Check-In. Please Check-Out first.</string>
    <string name="already_check_out">Please Check-In first.</string>
    <string name="out_of_working">Out of Working Place</string>
    <string name="ok">OK</string>
    <string name="are_you_sure_delete_all">Are you sure want to delete all data?</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="url_incorrect_format">The URL is incorrect format.</string>
    <string name="welcome_settings">Welcome! Please fill all fields.</string>
    <string name="valid_biometric_not_recognized">Error, biometric is valid but not recognized.</string>
    <string name="unrecoverable_error_has_been_encountered">Error, unrecoverable error has been encountered and the operation is complete</string>
    <!--###Others###-->
</resources>
