<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/aboutScroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/aboutAppIcon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/about"
                android:src="@mipmap/ic_launcher"
                tools:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/aboutAppName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutAppIcon"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/DevName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutAppName"
                android:gravity="center"
                android:text="@string/dev_name"
                android:textColor="@android:color/black"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/aboutVersion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/DevName"
                android:gravity="center"
                android:text="x.x"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/aboutDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutVersion"
                android:layout_marginTop="16dp"
                android:text="@string/about_description"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/aboutUsesHeader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutDescription"
                android:layout_marginTop="16dp"
                android:text="@string/uses_header"
                android:textSize="12sp" />

            <View
                android:id="@+id/space"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_below="@id/aboutUsesHeader">
            </View>

            <TextView
                android:id="@+id/aboutAOSPHeader1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/space"
                android:layout_marginTop="16dp"
                android:text="@string/uses_aosp_header1"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/aboutAOSPDetail1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutAOSPHeader1"
                android:text="@string/uses_aosp_detail1"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/aboutAOSPHeader3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/aboutAOSPDetail1"
                android:layout_marginTop="16dp"
                android:text="@string/uses_aosp_header3"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/aboutAOSPDetail3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutAOSPHeader3"
                android:text="@string/uses_aosp_detail3"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/aboutAOSPHeader4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/aboutAOSPDetail3"
                android:layout_marginTop="16dp"
                android:text="@string/uses_aosp_header4"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/aboutAOSPDetail4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutAOSPHeader4"
                android:text="@string/uses_aosp_detail4"
                android:textSize="12sp" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>